changing double values to long values